# vip-list

./: .gitignore  Cargo.toml  README.md  ava.config.cjs  ava.testnet.config.cjs  package.json
.github/workflows/: javascript.yml  rust.yml  tests.yml
__tests__/: main.ava.ts  tsconfig.json
src/: lib.rs
tests/: test.rs
