[package]
name = "vip-list"
version = "0.1.0"
authors = ["Willem Wyndham <willem@tenkbay.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.5", features = ["unstable"] }

[dev-dependencies]
workspaces = "0.1.1"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
