[package]
name = "vip-list"
version = "0.1.0"
authors = ["Willem Wyndham <willem@tenkbay.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.5", features = ["unstable"] }

[dev-dependencies]
workspaces = { git = "https://github.com/near/workspaces-rs", rev="e3273f79d86b9a927b5ce6bd16c5f01f781fb741"}
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
